# MCPP

./: .gitignore  CLAUDE.md  CMakeLists.txt  MCPP.md  extract_textures.py  tree.txt
Game/World/Block/: Block.h
assets/shaders/core/: fragment.glsl  uniforms.glsl  vertex.glsl
assets/textures/blocks/: BlockTypes.generated.h  atlas_mapping.json  block_registry.json
cmake/: compiler_options.cmake  dependencies.cmake
src/: main.cpp
src/Engine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
src/Engine/Physics/: Collision.cpp  Collision.h
src/Engine/Renderer/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  Shader.cpp  Shader.h
src/Game/: MinecraftApp.cpp  MinecraftApp.h
src/Game/Player/: PlayerController.cpp  PlayerController.h
src/Game/Rendering/: TextureAtlas.cpp  TextureAtlas.h
src/Game/World/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h
src/Game/World/Block/: BlockDatabase.cpp  BlockDatabase.h
src/Game/World/Generation/: Chunk.cpp  Chunk.h  Noise.h  Surface.cpp  Surface.h  SurfaceManager.cpp  SurfaceManager.h
src/Game/World/Meshing/: Greedy.cpp  Greedy.h
